Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-65017

QHeaderView - font is not propagated to section indicator

    XMLWordPrintable

Details

    Description

      An application has a QTableWidget with set font. Now, when sections are moved the section indicator doesn't use the set font. This looks ugly especially when the set font has different size than the default font. It doesn't make any difference if the font is set to QTableWidget or directly to the QHeaderView.

      The attached example can be used to reproduce the problem. Vertical header has Tahoma, size 20 font and its sections are movable.

      Attachments

        Activity

          People

            richard Richard Moe Gustavsen
            qtcomsupport Qt Support
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: